# pawtner-api

./: .env.example  .gitignore  Cargo.toml  openapi.yaml
.github/workflows/: ci.yml
docs/: authz-matrix.md  domain-schema.md  error-model.md  seeding.md
migrations/: 20260302120000_create_marketplace_schema.sql  20260302121000_seed_marketplace_demo.sql  20260302122000_add_keycloak_sub.sql
scripts/: README.md  smoke-keycloak-me.sh  test-me.sh  test-with-db.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/domain/: marketplace.rs  mod.rs
src/handlers/: mod.rs
src/middleware/: auth.rs  mod.rs
src/routes/: mod.rs
tests/: endpoints.rs
