[package]
name = "pawtner-api"
version = "0.1.0"
edition = "2021"
description = "Pawtner marketplace API (Rust/Axum)"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "v5"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
